--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,11 +1,11 @@
 ---
 ip6tables: False
 iptables_restore_file: /etc/iptables.up.rules
+iptables_ipv4_ip_forward: 0
 ip6tables_restore_file: /etc/ip6tables.up.rules
 iptables_pre_up_file: /etc/network/if-pre-up.d/iptables
 ip6tables_pre_up_file: /etc/network/if-pre-up.d/ip6tables
 iptables:
-  ssh_port: 22
   iptables_chain:
     - name: INPUT
       policy: ACCEPT
