--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -6,3 +6,8 @@
 
 - name: reload ip6tables
   raw: /sbin/ip6tables-restore < {{ ip6tables_restore_file }}
+
+- name: restart rsyslog
+  systemd:
+    name: rsyslog
+    state: restarted
